--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="NIMk6tMl9csEEI-IJPimIS5bVlN-VaUbwQiALxGnKSA" />
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
 <title>Milo — Full Chat (Fixed Composer & Proper Scroll)</title>
@@ -685,3 +686,4 @@ window.Milo = { RULES, processInput, appendMessage, matchRule };
 <script data-goatcounter="https://ajmaleee.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 </body>
 </html>
+
